# AdventureEscape

./: README.md  learn.md
backend/: .env  .gitignore  database.db  main.py  pyproject.toml
backend/core/: auth.py  config.py  euriai_client.py  models.py  prompts.py  story_generator.py
backend/models/: analytics_event.py  save_game.py  story.py  user.py
backend/routers/: job.py  story.py
backend/routes/: analytics.py  auth.py  saves.py
backend/schemas/: auth.py  save_game.py  story.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AuthPrompt.css  AuthPrompt.jsx  Dashboard.css  Dashboard.jsx  Header.css  Header.jsx  ProtectedRoute.jsx  StoryGame.css  StoryGame.jsx  storygenerator.jsx  storyloader.jsx
frontend/src/components/auth/: AuthModal.css  LoginModal.jsx  RegisterModal.jsx
frontend/src/components/saves/: LoadGameModal.jsx  SaveGameModal.css  SaveGameModal.jsx
frontend/src/contexts/: AuthContext.jsx  SaveGameContext.jsx
frontend/src/util/: analytics.js
